--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>State of the Field: Cell Metabolism & Quantum Biology</title>
     <link rel="stylesheet" href="poster.css">
-    <link rel="icon" type="image/x-icon" href="/Users/bodhaanshravipati/Downloads/academic-poster-template-v0.0.1/Mitochondria.png">
+    <link rel="icon" type="image/x-icon" href="Mitochondria.png">
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1">
     <!-- Based on a poster template from https://github.com/cpitclaudel/academic-poster-template -->
 
@@ -20,7 +20,7 @@
   <body vocab="http://schema.org/" typeof="ScholarlyArticle">
     <header role="banner">
       <aside>
-          <a href="https://github.com/cpitclaudel/academic-poster-template"><img src="/Users/bodhaanshravipati/Downloads/academic-poster-template-v0.0.1/Screen Shot 2022-12-07 at 10.27.07 PM.png" alt="Tutorial logo"></a>
+          <a href="https://github.com/cpitclaudel/academic-poster-template"><img src="Screen Shot 2022-12-07 at 10.27.07 PM.png" alt="Tutorial logo"></a>
       </aside>
       <div>
         <h1 property="headline">State of the FIeld: Cell Metabolism & Quantum Biology</h1>
@@ -35,7 +35,7 @@
                   </span>
       </div>
       <aside>
-          <a href="https://csail.mit.edu"><img style="background: white" src="/Users/bodhaanshravipati/Downloads/academic-poster-template-v0.0.1/Cytochrome_c.png" alt="MIT CSAIL Logo"></a>
+          <a href="https://csail.mit.edu"><img style="background: white" src="Cytochrome_c.png" alt="MIT CSAIL Logo"></a>
       </aside>
     </header>
 
@@ -51,7 +51,7 @@
 
   <article>
     <header><h3>History</h3></header>
-    <img src="/Users/bodhaanshravipati/Downloads/academic-poster-template-v0.0.1/Erwin_Schrödinger_(1933).jpeg" alt="Italian Trulli">
+    <img src="Erwin_Schrödinger_(1933).jpeg" alt="Italian Trulli">
   </article>
 
   <article>
