--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>State of the Field: Cell Metabolism & Quantum Biology</title>
     <link rel="stylesheet" href="poster.css">
-    <link rel="icon" type="image/x-icon" href="Mitochondria.png">
+    <link rel="icon" type="image/x-icon" href="/Mitochondria.png">
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1">
     <!-- Based on a poster template from https://github.com/cpitclaudel/academic-poster-template -->
 
