--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a href="https://github.com/cpitclaudel/academic-poster-template"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Mitochondria.svg/1280px-Mitochondria.svg.png" alt="Tutorial logo"></a>
       </aside>
       <div>
-        <h1 property="headline">State of the FIeld: Cell Metabolism & Quantum Biology</h1>
+        <h1 property="headline">State of the Field: Cell Metabolism & Quantum Biology</h1>
                   <h2 property="alternativeHeadline">History, Motivations, Progress, & Goals</h2>
                 <address>
               <a property="author">Bodhaansh Ravipati</a>
@@ -41,29 +41,42 @@
 
     <main property="articleBody">
         <article property="abstract">
-        <header><h3>Abstract</h3></header>
+        <header><h3>Motivations</h3></header>
 
-    <p>Organ systems from the kidney to the brain depend on fundamental metabolic pathways that are essential to all of life.1 
-    <p>Recent work has demonstrated insight into the basic physical properties that allow electron transport chains to exist.4 
+    <p>Organ systems from the kidney to the brain depend on fundamental metabolic pathways that are essential to all of life.<sup>1</sup>
+    <p>Recent work has demonstrated insight into the basic physical properties that allow electron transport chains to exist.<sup>4</sup>
     <p>Impacts ranging from cancer cell targeting to potential dampeners of aging have been proposed and readily investigated. Quantum biology is now used in analyzing and predicting the behaviors of more complex, intracellular systems. 
-    <p>Deeper understanding of disease, novel understanding of aging that can answer fundamental questions of metabolic efficiency.2,3,5</article>
+    <p>Deeper understanding of disease, novel understanding of aging that can answer fundamental questions of metabolic efficiency are all ambitions of the field today.<sup>2,3,5</sup></article>
   </article>
 
   <article>
     <header><h3>History</h3></header>
     <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Erwin_Schr%C3%B6dinger_%281933%29.jpg" alt="Italian Trulli">
+    <p>Figure 1: Erwin Schrödinger, Pioneer</p>
   </article>
 
   <article>
-    <header><h3>Motivations</h3></header>
+    <header><h3>History</h3></header>
+    <p>Schrödinger's "What is Life" argued for a view of life as a fundamentally quantum system, with organs and organelles all essentially machines promoting negative entropy and battling decay on a subatomic level.
+    <p>Beyond these theoretical applications, photosynthesis was understood with quantum coherence (an understanding of all objects as wave-like phenomena) with the selective use of pigments used to trap sunlight.
+    <p>Furthermore, this breakthrough led to Transition State Theory being applied to quantify enzyme temperature-dependence by viewing enzyme-substrate complexes as mere sites for quantum tunneling. This revolutionary understanding exerts considerable influence on even modern pharmaceutical engineering and medical design.
   </article>
 
   <article>
     <header><h3>Progress</h3></header>
+    <p>Hydrostatic pressure has been investigated as a key element in organic activity, with rates of quantum tunneling being shown as directly related.
+    <p>Metabolic pathways, particularly in plants, are known to follow strict biological clocks. Quantum tunneling has been successfully applied to these systems, demonstrating that tunneling is fundamental in sensory organs informing a sense of time.
+    <p>The importance of pigment in photosynthesis is known, with only recent studies establishing that excitons (collective excitations) are an excellent model to describe this process.
+    <img src="https://physics.aps.org/assets/ec2ae166-7307-412f-b4ab-6d8fba2d95dc/e39_2.png">
+    <p>Figure 2: A model of excitons in Photosynthesis.</p>
   </article>
 
   <article>
     <header><h3>Goals</h3></header>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/49/Thylakoid_membrane_3.svg">
+    <p>Figure 3: Photosystem II Model.</p>
+    <p>Efforts to mimic protein scaffolds involved in organic light harvesting has been achieved using nano-scaffolds. This system hopes to be the future of synthetic light harvesting.<sup>15</sup>
+    <p>ii.	Photosystem II proteins are specifically researched for their extreme efficiency to create artificial clean energy producers<sup>14</sup>
   </article>
 
   <article>
