--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <p>Organ systems from the kidney to the brain depend on fundamental metabolic pathways that are essential to all of life.<sup>1</sup>
     <p>Recent work has demonstrated insight into the basic physical properties that allow electron transport chains to exist.<sup>4</sup>
-    <p>Impacts ranging from cancer cell targeting to potential dampeners of aging have been proposed and readily investigated. Quantum biology is now used in analyzing and predicting the behaviors of more complex, intracellular systems. 
+    <p>Impacts ranging from cancer cell targeting to potential dampeners of aging have been proposed and readily investigated. Quantum biology is now used in analyzing and predicting the behaviors of more complex, intracellular systems.<sup>1</sup>
     <p>Deeper understanding of disease, novel understanding of aging that can answer fundamental questions of metabolic efficiency are all ambitions of the field today.<sup>2,3,5</sup></article>
   </article>
 
@@ -57,16 +57,16 @@
 
   <article>
     <header><h3>History</h3></header>
-    <p>Schrödinger's "What is Life" argued for a view of life as a fundamentally quantum system, with organs and organelles all essentially machines promoting negative entropy and battling decay on a subatomic level.
-    <p>Beyond these theoretical applications, photosynthesis was understood with quantum coherence (an understanding of all objects as wave-like phenomena) with the selective use of pigments used to trap sunlight.
-    <p>Furthermore, this breakthrough led to Transition State Theory being applied to quantify enzyme temperature-dependence by viewing enzyme-substrate complexes as mere sites for quantum tunneling. This revolutionary understanding exerts considerable influence on even modern pharmaceutical engineering and medical design.
+    <p>Schrödinger's "What is Life?" argued for a view of life as a fundamentally quantum system, with organs and organelles all essentially machines promoting negative entropy and battling decay on a subatomic level.<sup>11</sup>
+    <p>Beyond these theoretical applications, photosynthesis was understood with quantum coherence (an understanding of all objects as wave-like phenomena) with the selective use of pigments used to trap sunlight.<sup>7</sup>
+    <p>Furthermore, this breakthrough led to Transition State Theory being applied to quantify enzyme temperature-dependence by viewing enzyme-substrate complexes as mere sites for quantum tunneling. This revolutionary understanding exerts considerable influence on even modern pharmaceutical engineering and medical design.<sup>13</sup>
   </article>
 
   <article>
     <header><h3>Progress</h3></header>
-    <p>Hydrostatic pressure has been investigated as a key element in organic activity, with rates of quantum tunneling being shown as directly related.
-    <p>Metabolic pathways, particularly in plants, are known to follow strict biological clocks. Quantum tunneling has been successfully applied to these systems, demonstrating that tunneling is fundamental in sensory organs informing a sense of time.
-    <p>The importance of pigment in photosynthesis is known, with only recent studies establishing that excitons (collective excitations) are an excellent model to describe this process.
+    <p>Hydrostatic pressure has been investigated as a key element in organic activity, with rates of quantum tunneling being shown as directly related.<sup>14</sup>
+    <p>Metabolic pathways, particularly in plants, are known to follow strict biological clocks. Quantum tunneling has been successfully applied to these systems, demonstrating that tunneling is fundamental in sensory organs informing a sense of time.<sup>6</sup>
+    <p>The importance of pigment in photosynthesis is known, with only recent studies establishing that excitons (collective excitations) are an excellent model to describe this process.<sup>6,7</sup>
     <img src="https://physics.aps.org/assets/ec2ae166-7307-412f-b4ab-6d8fba2d95dc/e39_2.png">
     <p>Figure 2: A model of excitons in Photosynthesis.</p>
   </article>
@@ -79,8 +79,24 @@
     <p>ii.	Photosystem II proteins are specifically researched for their extreme efficiency to create artificial clean energy producers<sup>14</sup>
   </article>
 
-  <article>
-    <header><h3>Figures</h3></header>
+  <article style="font-size: small;">
+    <header><h3>References</h3></header>
+    <p>1.	Cairns, R., Harris, I. & Mak, T. Regulation of cancer cell metabolism. Nat Rev Cancer 11, 85–95 (2011). https://doi.org/10.1038/nrc2981
+    <p>2.	References1. Primer, K. R.; Psaltis, P. J.; Tan, J. T.; Bursill, C. A. The role of high-density lipoproteins in endothelial cell metabo metabolism and diabetes-impaired angiogenesis. International Journal of Molecular Sciences 2020, 21, 3633.
+    <p>3.	La Rosa, R.; Johansen, H. K.; Molin, S. Adapting to the airways: metabolic requirements of Pseudomonas aeruginosa during the infection of cystic fibrosis patients. Metabolites 2019, 9, 234.
+    <p>4.	Li, J.; Zhang, Y.; Xiao, Q.; Tian, F.; Liu, X.; Li, R.; Zhao, G.; Jiang, F.; Liu, Y. Mitochondria as target of quantum dots toxicity. J. Hazard. Mater. 2011, 194, 440-444.
+    <p>5.	Nunn, A. V.; Guy, G. W.; Bell, J. D. The quantum mitochondrion and optimal health. Biochem. Soc. Trans. 2016, 44, 1101-1110
+    <p>6.	Nunn, A. V. W.; Guy, G. W.; Bell, J. D. Thermodynamics and Inflammation: Insights into Quantum Biology and Ageing. Quantum Reports 2022, 4, 47-74
+    <p>7.	Roach T, Krieger-Liszkay A. Regulation of photosynthetic electron transport and photoinhibition. Curr Protein Pept Sci. 2014;15(4):351-362. doi:10.2174/1389203715666140327105143
+    <p>8.	Schirhagl, R.; Chipaux, M.; Vedelaar, T.; Perona Martinez, F. P.; Li, R.; van der Laan, K. J.; Hemelaar,S. R.; Evans, E. P. P.; Sharmin, R.; Damle, V. G.; Nusantara, A. C.; Nie, L. Quantum monitoring of cellular metabolic activities in single mitochondria. Sci. Adv. 2021, 7, eabf0573
+    <p>9.	Engel, G. S.; Calhoun, T. R.; Read, E. L.; Ahn, T.; Mančal, T.; Cheng, Y.; Blankenship, R. E.; Fleming,G. R. Evidence for wavelike energy transfer through quantum coherence in photosynthetic systems. Nature 2007, 446, 782-786
+    <p>10.	Kauffman S. Answering Schrödinger’s “What Is Life?”. Entropy. 2020; 22(8):815. https://doi.org/10.3390/e22080815
+    <p>11.	SCHRÖDINGER, E. What is Life? The Physical Aspect of the Living Cell. Cambridge: Cambridge Univ. Press, 1945
+    <p>12.	Zigmantas, D.; Westenhoff, S.; Thyrhaug, E.; Thorwart, M.; Tempelaar, R.; Howe-Siang Tan; Renger, T.; Prokhorenko, V. I.; Ogilvie, J. P.; Dwayne Miller, R. J.; Tomáš Mančal; Thomas, L. C. J.; Ulrich Kleinekathöfer; Jürgen Hauer; Hong-Guang Duan; Coker, D. F.; Cogdell, R. J.; Cao, J. Quantum biology revisited. Sci. Adv. 2020, 6, eaaz4888
+    <p>13.	Brookes JC. Quantum effects in biology: golden rule in enzymes, olfaction, photosynthesis and magnetodetection. Proc Math Phys Eng Sci. 2017 May;473(2201):20160822. doi: 10.1098/rspa.2016.0822. Epub 2017 May 31. PMID: 28588400; PMCID: PMC5454345.
+    <p>14.	Marais, A., Adams, B., Ringsmuth, A. K., Ferretti, M., Gruber, J. M., Hendrikx, R., … van Grondelle,R. (2018). The future of quantum biology. Journal of The Royal Society Interface, 15(148).https://doi.org/10.1098/rsif.2018.0640 (Original work published November 01, 2018)
+    <p>15.	A Bioinspired Light Harvesting System in Aqueous Medium: Highly Efficient Energy Transfer through the Self Assembly of β-Sheet Nanostructures of Poly-D-LYSINE
+      </p>
   </article>
     </main>
 
